--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,9 +3,17 @@
     <style name="Base.Theme.Care_Prototype_01" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:forceDarkAllowed" tools:targetApi="q" >false</item>
         <item name="android:textViewStyle">@style/lionelTextView</item>
+        <item name="android:buttonStyle">@style/lionelButton</item>
     </style>
 
     <style name="lionelTextView" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/font</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="lionelButton" parent="android:Widget.Button">
+        <item name="android:fontFamily">@font/font</item>
+        <item name="android:backgroundTint">@color/light_blue</item>
     </style>
 </resources>
