--- a/app/src/main/res/layout/fragment_java_data_types_2.xml
+++ b/app/src/main/res/layout/fragment_java_data_types_2.xml
@@ -12,207 +12,217 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/P_Operators_imageView1"
+            android:id="@+id/P_DataTypes_imageView1"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_java_cut" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="@string/P_Operator_syntax"
-            app:layout_constraintBottom_toBottomOf="@+id/P_Operators_imageView1"
+            android:text="Data types are essential to Java programming because they guarantee type safety, facilitate memory management, and specify how variables and expressions should behave."
+            app:layout_constraintBottom_toBottomOf="@+id/P_DataTypes_imageView1"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/P_Operators_imageView1"
-            app:layout_constraintTop_toTopOf="@+id/P_Operators_imageView1"
-            app:layout_constraintVertical_bias="0.04"
+            app:layout_constraintStart_toEndOf="@+id/P_DataTypes_imageView1"
+            app:layout_constraintTop_toTopOf="@+id/P_DataTypes_imageView1"
+            app:layout_constraintVertical_bias="0.0"
             tools:ignore="TextSizeCheck" />
 
-        <TextView
-            android:id="@+id/P_Operators_Text1"
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/codey_python_cut"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:srcCompat="@drawable/codey_java_cut" />
+
+        <Button
+            android:id="@+id/java_DT_DYK1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="144dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/operators_1"
+            android:layout_marginEnd="64dp"
+            android:text="@string/dyk"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:theme="@style/lionelButton"
+            app:cornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintEnd_toStartOf="@+id/guideline7"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/imageView2"
+            app:layout_constraintVertical_bias="1.0"
+            app:strokeColor="#AAAAAA"
+            app:strokeWidth="0.1dp"
+            tools:ignore="UnknownIdInLayout,TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/P_datatypes_Text1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Here are some examples of commonly used data types in Java with their corresponding."
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
 
         <TextView
-            android:id="@+id/p_Operators_Text"
+            android:id="@+id/p_datatypes_Text7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/P_types_of_operator"
+            android:text="1. Primitive Data Types:"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_imageView7" />
+            app:layout_constraintTop_toBottomOf="@+id/P_datatypes_Text1" />
 
         <TextView
-            android:id="@+id/P_Operators_Text2"
+            android:id="@+id/p_Operators_Text7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/Operator_meaning"
+            android:layout_marginStart="24dp"
+            android:text="@string/dt_a"
+            android:textColor="#000000"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+            android:justificationMode="none"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/p_datatypes_Text7"
+            tools:ignore="TextSizeCheck,VisualLintLongText" />
+
+        <TextView
+            android:id="@+id/p_Operators_Text8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:text="int myNumber = 42;"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text1"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text7"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <ImageView
-            android:id="@+id/P_Operators_imageView7"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/codey_python_cut"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text2"
-            app:srcCompat="@drawable/codey_python_cut" />
-
         <TextView
-            android:id="@+id/P_Operators_textView10"
+            android:id="@+id/p_Operators_Text9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/callout_background"
-            android:text="@string/P_Operators_codey1"
-            app:layout_constraintBottom_toBottomOf="@+id/P_Operators_imageView7"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/P_Operators_imageView7"
-            app:layout_constraintTop_toTopOf="@+id/P_Operators_imageView7"
-            app:layout_constraintVertical_bias="0.04"
-            tools:ignore="TextSizeCheck" />
-
-        <TextView
-            android:id="@+id/P_Operators_Text03"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/operators_description"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/dt_b"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-
-        <ImageView
-            android:id="@+id/P_Syntax_imageView4"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/codey_python_cut"
-            app:layout_constraintBottom_toBottomOf="@+id/P_Operators_Text8"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toTopOf="@+id/P_Operators_Text8"
-            app:srcCompat="@drawable/codey_python_cut" />
-
-        <TextView
-            android:id="@+id/P_Operators_Text8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/callout_background"
-            android:text="@string/logical_operators_description"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/P_Syntax_imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text03"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text8"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/p_Operators_Text2"
+            android:id="@+id/p_Operators_Text10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/operators_description_2"
+            android:layout_marginStart="50dp"
+            android:justificationMode="none"
+            android:text="double myDouble = 3.14159;"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text8"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text9"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
-        <ImageView
-            android:id="@+id/P_Operators_imageView5"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/codey_python_cut"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text2"
-            app:srcCompat="@drawable/codey_python_cut" />
-
         <TextView
-            android:id="@+id/P_Operators_Text9"
+            android:id="@+id/p_Operators_Text11"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/callout_background"
-            android:text="@string/p_membership_operators"
-            app:layout_constraintBottom_toBottomOf="@+id/P_Operators_imageView5"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/dt_c"
+            android:textColor="#000000"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/P_Operators_imageView5"
-            app:layout_constraintTop_toTopOf="@+id/P_Operators_imageView5"
-            app:layout_constraintVertical_bias="0.464"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text10"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/p_Syntax_Text3"
+            android:id="@+id/p_Operators_Text12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/identity_operators_description"
+            android:layout_marginStart="50dp"
+            android:justificationMode="none"
+            android:text="boolean isTrue = true;"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text9"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text11"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
-
-        <ImageView
-            android:id="@+id/P_Syntax_imageView6"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/codey_python_cut"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/p_Syntax_Text3"
-            app:srcCompat="@drawable/codey_python_cut" />
 
         <TextView
-            android:id="@+id/P_Syntax_Text10"
+            android:id="@+id/p_Operators_Text13"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/callout_background"
-            android:text="@string/codey_text"
-            app:layout_constraintBottom_toBottomOf="@+id/P_Syntax_imageView6"
+            android:layout_height="45dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/dt_d"
+            android:textColor="#000000"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/P_Syntax_imageView6"
-            app:layout_constraintTop_toTopOf="@+id/P_Syntax_imageView6"
-            app:layout_constraintVertical_bias="0.464"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text12"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
+        <TextView
+            android:id="@+id/p_Operators_Text14"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:justificationMode="none"
+            android:text="boolean isTrue = true;"
+            android:textColor="#000000"
+            android:textIsSelectable="false"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
+            app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text13"
+            tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical1"
