--- a/app/src/main/res/layout/fragment_java_inputs_3.xml
+++ b/app/src/main/res/layout/fragment_java_inputs_3.xml
@@ -70,7 +70,7 @@
 			android:id="@+id/P_Intro_btnQ1"
 			android:layout_width="271dp"
 			android:layout_height="wrap_content"
-			android:text="add here"
+			android:text="What are the input types in java?"
 			android:textAllCaps="false"
 			android:textColor="#FFFFFF"
 			android:textStyle="bold"
@@ -85,7 +85,7 @@
 			android:id="@+id/P_Intro_btnQ2"
 			android:layout_width="271dp"
 			android:layout_height="wrap_content"
-			android:text="add here"
+			android:text="What are java scanner is used for?"
 			android:textAllCaps="false"
 			android:textColor="#FFFFFF"
 			android:textStyle="bold"
@@ -102,7 +102,7 @@
 			android:layout_width="271dp"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="68dp"
-			android:text="add here"
+			android:text="What are the input types in java?"
 			android:textAllCaps="false"
 			android:textColor="#FFFFFF"
 			android:textStyle="bold"
