Added conditional statement java

--- a/app/src/main/res/layout/fragment_java_conditional_statement_7.xml
+++ b/app/src/main/res/layout/fragment_java_conditional_statement_7.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/P_loop_btnQ1"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="What is the purpose of loop control variables?"
+                android:text="What happens if a condition in the &quot;else if&quot; statement is true?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -58,7 +58,7 @@
                 android:id="@+id/P_loop_btnQ2"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="What are the main types of looping statements in Java?"
+                android:text="What is the difference between &quot;==&quot; and &quot;.equals()&quot; when comparing objects in Java's conditional statements?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -75,7 +75,7 @@
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="68dp"
-                android:text="How do you exit or terminate a loop prematurely?"
+                android:text="How can I verify many conditions with a &quot;if&quot; statement in java?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -127,7 +127,7 @@
                 android:id="@+id/textView12"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Java programming offers control flow structures that facilitate iterative operations which can be essential for efficiently executing tedious or repetitive tasks, as well as looping through collections of data. Looping is not only a key feature of Java, but allows developers to make use of the language's full capabilities. However, the structure of the loop must be carefully chosen to ensure the right amount of repetition and termination conditions are set. To achieve a higher degree of perplexity and burstiness, the structure of the loop should be defined by more than one condition."
+                android:text="Programming hinges on conditions and if statements, which form the basis of decision-making and control the dynamic nature of programs. These powerful statements enable developers to craft code that can respond to a myriad of different scenarios, propelling it into a realm of bespoke flexibility. They aid programmers in describing the rules that will define what a program does next, through a foundation of intelligibility."
                 app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
                 app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
                 app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1" />
